--- a/references_first.bib
+++ b/references_first.bib
@@ -6,7 +6,7 @@
   PMID={34306999},
   PMCID={PMC8258678},
   year={2021},
-  publisher={nih.gov}
+  publisher={https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8258678}
 }
 
 @article{Maitlan,
@@ -29,7 +29,8 @@
   author={Mariella Gregorich, Michael Kammer, Harald Mischak, Georg Heinze.},
   journal={Volume 44, Issue 8-9},
   year={2025},
-  volume={10.1002}
+  volume={10.1002},
+  publisher={https://onlinelibrary.wiley.com/doi/10.1002/sim.70062}
 }
 
 @article{gajjala,
@@ -96,5 +97,6 @@
   author={Jose Manuel Pereira, Mario Bastoa, Amelia Ferreira da Silva},
   journal={3rd GLOBAL CONFERENCE on BUSINESS, ECONOMICS, MANAGEMENT and TOURISM},
   volume={Volume 39, 2016, Pages 634-641},
-  year={2016}
+  year={2016},
+  publisher={https://doi.org/10.1016/j.iref.2023.10.013}
 }
