--- a/index.qmd
+++ b/index.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Lass- Ridge Regression Group for data science projects - Fall 2025 "
+title: "Lasso - Ridge Regression Group for data science projects - Fall 2025 "
 subtitle: "A report on Lasso-Ridge Regression"
 author: "Vijay Mohanam, Jennifer Nesbit and Sassou Khabou (Advisor: Dr. Cohen)"
 date: '`r Sys.Date()`'
@@ -22,7 +22,7 @@ Slides: [slides.html](slides.html){target="_blank"} ( Go to `slides.qmd`
 to edit)
 
 ::: callout-note
-**Remember:** This is our first week as group, we are trying to compile a summary of introductions!
+**Week 01:** This is our first week as group, we are trying to compile a summary of introductions!
 
 Nice report!
 :::
