--- a/index_first.qmd
+++ b/index_first.qmd
@@ -7,7 +7,7 @@ format:
   html:
     code-fold: true
 course: Capstone Projects in Data Science
-bibliography: references.bib # file contains bibtex for references
+bibliography: references_first.bib # file contains bibtex for references
 #always_allow_html: true # this allows to get PDF with HTML features
 self-contained: true
 execute: 
