--- a/references.bib
+++ b/references.bib
@@ -1,84 +1,75 @@
-@article{wang2019symbolic,
-  title={Symbolic regression in materials science},
-  author={Wang, Yiqun and Wagner, Nicholas and Rondinelli, James M},
-  journal={MRS communications},
-  volume={9},
-  number={3},
-  pages={793--805},
-  year={2019},
-  publisher={Cambridge University Press}
+@article{aheto,
+  title={A Predictive Model, and Predictors of Under-Five Child Malaria Prevalence in Ghana},
+  author={Aheto JMK, Agbadi P, Duah HO},
+  journal={Prev Med Rep. 10.1016/j.pmedr.2021.101475},
+  year={2021}
 }
 
-@article{su2012linear,
-  title={Linear regression},
-  author={Su, Xiaogang and Yan, Xin and Tsai, Chih-Ling},
-  journal={Wiley Interdisciplinary Reviews: Computational Statistics},
-  volume={4},
-  number={3},
-  pages={275--294},
-  year={2012},
-  publisher={Wiley Online Library}
+@article{huang,
+  title={Comparison of Machine Learning Models for Predicting Stroke Risk in Hypertensive Patients: Lasso Regression Model, Random Forest Model, Boruta Algorithm Model, and Boruta Algorithm Combined with Lasso Regression Model.},
+  author={Huang, Junzhang, and Wencai Liu.},
+  journal={Medicine (Baltimore) 104 (22): e42690.},
+  year={2025},
+  publisher={https://doi.org/10.1097/MD.0000000000042690}
 }
 
-@article{adams2021topology,
-  title={Topology applied to machine learning: From global to local},
-  author={Adams, Henry and Moy, Michael},
-  journal={Frontiers in Artificial Intelligence},
-  volume={4},
-  pages={668302},
-  year={2021},
-  publisher={Frontiers Media SA}
+@article{sommer,
+  title={Dealing with Adverse Drug Reactions in the Context of Polypharmacy Using Regression Models.},
+  author={Jakob Sommer, Justyna Wozniak, Roberto Viviani},
+  journal={MC PubMed Central Sci Rep. 2024 Nov 9;14:27355. doi: 10.1038/s41598-024-78474-4},
+  year={2024}
 }
 
-
-
-@article{daffertshofer2004pca,
-  title={PCA in studying coordination and variability: a tutorial},
-  author={Daffertshofer, Andreas and Lamoth, Claudine JC and Meijer, Onno G and Beek, Peter J},
-  journal={Clinical biomechanics},
-  volume={19},
-  number={4},
-  pages={415--428},
-  year={2004},
-  publisher={Elsevier}
+@article{fujino,
+  title={Applying ‘Lasso’ Regression to Predict Future Visual Field Progression in Glaucoma Patients},
+  author={Fujino, Yuri, Hiroshi Murata, Chihiro Mayama, and Ryo Asaoka},
+  journal={Investigative Opthalmology & Visual Science 56 (4): 2334-. },
+  year={2015},
+  publisher={https://doi.org/10.1167/iovs.15-16445}
 }
 
-@article{wang2014,
-  title={Generalized estimating equations in longitudinal data analysis: a review and recent developments},
-  author={Wang, Ming},
-  journal={Advances in Statistics},
-  volume={2014},
-  year={2014},
-  publisher={Hindawi}
+@article{amaador,
+  title={Discriminating between Waldenström Macroglobulinemia and Marginal Zone Lymphoma Using Logistic LASSO Regression.},
+  author={Amaador, Karima, Josephine M. I Vos, Steven T Pals, Willem Kraan, Johan A Dobber, Monique C Minnema, Harry R Koene, Peter C de Bruin, Aiko H Zwinderman, and Marie José Kersten},
+  journal={Leukemia & Lymphoma 63 (5): 1070–79.},
+  year={2022},
+  publisher={https://doi.org/10.1080/10428194.2021.2018584}
 }
 
-@Manual{R-base,
-  title = {R: A Language and Environment for Statistical
-           Computing},
-  author = {{R Core Team}},
-  organization = {R Foundation for Statistical Computing},
-  address = {Vienna, Austria},
-  year = {2019},
-  url = {https://www.R-project.org},
+@article{pereira,
+  title={The Logistic Lasso and Ridge Regression in Predicting Corporate Failure.},
+  author={Jose Manuel Pereira, Amelia Ferreira da Silva, Mario Bastoa},
+  journal={3rd GLOBAL CONFERENCE on BUSINESS, ECONOMICS, MANAGEMENT and TOURISM Volume 39, 2016, Pages 634-641},
+  year={2016}
 }
 
-@book{efr2008,
-  title={Nonparametric Curve Estimation: Methods, Theory, and Applications},
-  author={Efromovich, S.},
-  isbn={9780387226385},
-  lccn={99013253},
-  series={Springer Series in Statistics},
-  url={https://books.google.com/books?id=mdoLBwAAQBAJ},
-  year={2008},
-  publisher={Springer New York}
+@article{laufer,
+  title={ensor Selection for Tidal Volume Determination via Linear Regression—Impact of Lasso versus Ridge Regression.},
+  author={Laufer, Bernhard, Paul D Docherty, Rua Murray, Sabine Krueger-Ziolek, Nour Aldeen Jalal, Fabian Hoeflinger, Stefan J Rupitsch, Leonhard Reindl, and Knut Moeller},
+  journal={Sensors (Basel, Switzerland) 23 (17): 7407.},
+  year={2023},
+  publisher={https://doi.org/10.3390/s23177407}
 }
-@article{bro2014principal,
-  title={Principal component analysis},
-  author={Bro, Rasmus and Smilde, Age K},
-  journal={Analytical methods},
-  volume={6},
-  number={9},
-  pages={2812--2831},
-  year={2014},
-  publisher={Royal Society of Chemistry}
+
+@article{czajkowski,
+  title={Steering the Interpretability of Decision Trees Using Lasso Regression - an Evolutionary Perspective},
+  author={Czajkowski, Marcin, Krzysztof Jurczuk, and Marek Kretowski},
+  journal={nformation Sciences 638.},
+  year={2023},
+  publisher={https://doi.org/10.1016/j.ins.2023.118944}
+}
+
+@article{gabauer,
+  title={Estimating u.s. Housing Price Network Connectedness: Evidence from Dynamic Elastic Net, Lasso, and Ridge Vector Autoregressive Models.},
+  author={David Gabauer, Hardik A. Marfatia, Rangan Gupta},
+  journal={International Review of Economics & Finance Volume 89, Part B, January 2024, Pages 349-362},
+  year={2024}
+}
+
+@article{vidaurre,
+  title={A Survey of L1 Regression.},
+  author={Vidaurre, Diego, Concha Bielza, and Pedro Larrañaga},
+  journal={International Statistical Review 81 (3): 361–87.},
+  year={2013},
+  publisher={https://doi.org/10.1111/insr.12023}
 }
