--- a/references.bib
+++ b/references.bib
@@ -73,3 +73,50 @@
   year={2013},
   publisher={https://doi.org/10.1111/insr.12023}
 }
+
+@article{ali,
+  title={Application and impact of Lasso regression in gastroenterology},
+  author={Ali, H., Shahzad, M., Sarfraz, S. et al.},
+  journal={A systematic review. Indian J Gastroenterol 42, 780–790 (2023)},
+  year={2023},
+  publisher={https://doi.org/10.1007/s12664-023-01426-9}
+}
+
+@article{gauraha,
+  title={Introduction to the LASSO},
+  author={Gauraha, N},
+  journal={Reson 23, 439–464 (2018)},
+  year={2018},
+  publisher={https://doi.org/10.1007/s12045-018-0635-x}
+}
+
+@article{li,
+  title={Prognostic nomograms for gastric carcinoma after D2 + total gastrectomy to assist decision-making for postoperative treatment: based on Lasso regression},
+  author={Li, Y., Bai, M., & Gao, Y},
+  journal={World Journal of Surgical Oncology, 21(1), Article 207},
+  year={2023},
+  publisher={https://doi.org/10.1186/s12957-023-03097-4}
+}
+
+@article{robert,
+  title={Regression Shrinkage and SelectionVia the Lasso},
+  author={Robert Tibshirani},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological), Volume 58, Issue 1, January 1996, Pages 267–288},
+  year={1996},
+  publisher={https://doi.org/10.1111/j.2517-6161.1996.tb02080.x}
+}
+
+@article{muthu,
+  title={LASSO: A feature selection technique in predictive modeling for machine learning},
+  author={R. Muthukrishnan and R. Rohini},
+  journal={IEEE International Conference on Advances in Computer Applications (ICACA), Coimbatore, India, 2016, pp. 18-20},
+  year={2016},
+  publisher={doi: 10.1109/ICACA.2016.7887916}
+}
+
+@article{mari,
+  title={Prediction Modeling with Many Correlated and Zero-Inflated Predictors: Assessing the Nonnegative Garrote Approach.},
+  author={Mariella Gregorich, Harald Mischak, Michael Kammer},
+  journal={Volume 44, Issue 8-910.1002},
+  year={2025}
+}
