--- a/index.qmd
+++ b/index.qmd
@@ -24,7 +24,7 @@ to edit)
 ::: callout-note
 **Week 01:** This is our first week as group, we are trying to compile a summary of introductions!
 
-**Week 02:** We tried to add more articles from our research!
+**Week 02:** We tried to add more articles from our research and narrowing on a perticular dataset!
 
 Nice effort!
 :::
@@ -39,7 +39,9 @@ Lasso regression has also been proven as an effective methodology in economics a
 
 Research has been done to compare the use of Lasso as a methodology to multiple related techniques such as Ridge and Elastic Net. Studies have shown that Ridge regression sometimes outperforms Lasso when predictor variables are highly correlated. However, Lasso tends to be more valuable when only a few predictors are significant and applicable to the problem at hand Vidaurre et al., 2013[@vidaurre]. Overall, Lasso shows a consistent advantage with its ability to produce sparse, interpretable and efficient models making it an excellent tool for both modeling and research.
 
-A principal advantage of Lasso (Least Absolute Shrinkage and Selection Operator) regression is its capacity for feature shrinkage and selection. As established in the seminal works by “Introduction to the Lasso” (Gauraha, N, 2018)[@gauraha], selection of most relevant variables from a large set of clinical and pathological data while shrinking less important ones to zero(Li, Y., Bai. 2023)[@li] and “Regression Shrinkage and Selection Via the Lasso” (Robert Tibshirani. 1996)[@robert]. They also compare lasso regression to both ridge regression and subset selection. Unlike in ridge regression, where all parameters can only asymptotically approach zero, lasso regression allows some parameters to reach zero. These techniques are applied in ML for feature selection techniques in predictive modeling (R. Muthukrishnan and R. Rohini. 2016)[@muthu] .On the same lines, we can see how to handle zero inflated predictors(Mariella Gregorich et al., 2025)[@mari] handled by Lasso.
+A principal advantage of Lasso (Least Absolute Shrinkage and Selection Operator) regression is its capacity for feature shrinkage and selection. As established in the seminal works by “Introduction to the Lasso” (Gauraha, N, 2018)[@gauraha], selection of most relevant variables from a large set of clinical and pathological data while shrinking less important ones to zero(Li, Y., Bai. 2023)[@li] and “Regression Shrinkage and Selection Via the Lasso” (Robert Tibshirani. 1996)[@robert]. They also compare lasso regression to both ridge regression and subset selection. Unlike in ridge regression, where all parameters can only asymptotically approach zero, lasso regression allows some parameters to reach zero. These techniques are applied in Machine Learning for feature selection techniques in predictive modeling (R. Muthukrishnan and R. Rohini. 2016)[@muthu] .On the same lines, we can see how to handle zero inflated predictors(Mariella Gregorich et al., 2025)[@mari] handled by Lasso.
+
+After considering the multiple impactful applications of Lasso regression, this study will apply Lasso to a real-world healthcare problem using the Surveillance, Epidemiology and End Results (SEER) database. Specifically, we aim to develop predictive models that will estimate the likelihood of various cancer treatments such as chemotherapy, radiation therapy or surgery based on patient demographics and clinical characteristics. We will leverage the ability of Lasso to select the most influential factors driving treatment decisions while automatically excluding less informative predictors. The ultimate goal of this application is to support utilization management processes by streamlining treatment approval pathways and expediting patient access to appropriate care. Through this study, we aim to demonstrate how Lasso regressive can serve as an effective tool for improving operational efficiency and decision making in oncology care.
 
 *The final introduction paragraph on the problem that we will apply Lasso to will be added to draft next week after finalizing the problem and choosing a dataset.*
 
